Fixed slight scroll appearing on smaller screens

--- a/src/www/styles/game.css
+++ b/src/www/styles/game.css
@@ -88,7 +88,7 @@ memory-board {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  width: 100%;
+  width: 15rem;
   height: 100%;
   padding-left: 1rem;
   color: white;
